# build-observe-scale-agents

./: .gitignore  CONTRIBUTING.md  README.md  RELEASE_NOTES.md  SECURITY.md
assets/: README.md
demos/: README.md
demos/finops-cloud-agent/: README.md  pyproject.toml
demos/finops-cloud-agent/app/: README.md  agent.py  instructions.md
demos/finops-cloud-agent/config/: README.md  dev.env.example  prod.env.example
diagrams/: README.md  architecture.mmd
docs/: README.md  linkedin-follow-up.md  mcp-client-integration.md  publishing-checklist.md  references.md  session-notes.md
screenshots/: README.md
slides/: README.md
toolbox/: README.md  tools.example.yaml
